[Mutants and Masterminds 3E] Corrected power points width again (#5388)
* [Mutants and Masterminds 3E]

~ Correct Power points input fields being too small when dealing with larger numbers.

* [Mutants and Masterminds 3E] Corrected power points width again

--- a/Mutants and Masterminds 3E/mutants-and-masterminds.css
+++ b/Mutants and Masterminds 3E/mutants-and-masterminds.css
@@ -283,7 +283,7 @@ div.sheet-section-details div.sheet-details-row:nth-of-type(3) input[type="text"
 
 div.sheet-section-details div.sheet-details-row:nth-of-type(4) input[type="number"] {
     margin-right: 0px;
-    width: 5%;}
+    width: 6%;}
 
 div.sheet-section-abilities,
 div.sheet-section-points,
